crates/alder-can/src/snapshots/alder_can__module__tests__interface_from_module_with_binops.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing ((|>))\n\ninfix left 6 (|>) = apR\n\napR x f = f x\n"
---
Interface {
    home: ModuleName {
        package: None,
        name: "Main",
    },
    values: [],
    aliases: [],
    unions: [],
    binops: [
        InterfaceBinop {
            symbol: "|>",
            annotation: Annotation {
                free_vars: [
                    "a",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
            },
            associativity: Left,
            precedence: Precedence(
                6,
            ),
            function: "apR",
        },
    ],
}
