crates/alder-can/src/snapshots/alder_can__module__tests__interface_non_exported_binop.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (foo)\n\ninfix left 6 (|>) = apR\n\napR x f = f x\n\nfoo = 42\n"
---
Interface {
    home: ModuleName {
        package: None,
        name: "Main",
    },
    values: [
        InterfaceValue {
            name: "foo",
            annotation: Annotation {
                free_vars: [
                    "a",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
            },
        },
    ],
    aliases: [],
    unions: [],
    binops: [],
}
