crates/alder-can/src/snapshots/alder_can__module__tests__let_destruct.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf =\n    let\n        (a, b) = (1, 2)\n    in\n    a\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 8,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 5,
                    },
                    end: Position {
                        line: 8,
                        column: 1,
                    },
                },
                value: LetDestruct {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 9,
                            },
                            end: Position {
                                line: 5,
                                column: 15,
                            },
                        },
                        value: Tuple {
                            first: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 11,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                            second: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 14,
                                    },
                                },
                                value: Var(
                                    "b",
                                ),
                            },
                            rest: [],
                        },
                    },
                    value: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 18,
                            },
                            end: Position {
                                line: 5,
                                column: 24,
                            },
                        },
                        value: Tuple {
                            first: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 19,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 20,
                                    },
                                },
                                value: Int(
                                    1,
                                ),
                            },
                            second: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 22,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 23,
                                    },
                                },
                                value: Int(
                                    2,
                                ),
                            },
                            rest: [],
                        },
                    },
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 7,
                                column: 5,
                            },
                            end: Position {
                                line: 7,
                                column: 6,
                            },
                        },
                        value: VarLocal(
                            "a",
                        ),
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
