crates/alder-can/src/snapshots/alder_can__module__tests__let_destruct_ctor_pattern_binds_names.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Maybe exposing (Maybe(..))\n\nf w = let (Just x) = w in x\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 1,
                    },
                    end: Position {
                        line: 5,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 3,
                        },
                        end: Position {
                            line: 5,
                            column: 4,
                        },
                    },
                    value: Var(
                        "w",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 7,
                    },
                    end: Position {
                        line: 6,
                        column: 1,
                    },
                },
                value: LetDestruct {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 12,
                            },
                            end: Position {
                                line: 5,
                                column: 18,
                            },
                        },
                        value: Constructor(
                            PatternCtor {
                                reference: ConstructorName {
                                    home: ModuleName {
                                        package: None,
                                        name: "Maybe",
                                    },
                                    union: "Maybe",
                                    name: "Just",
                                },
                                union: Union {
                                    name: Located {
                                        region: Region {
                                            start: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                        },
                                        value: "Maybe",
                                    },
                                    parameters: [
                                        "a",
                                    ],
                                    ctors: [
                                        Ctor {
                                            name: "Just",
                                            index: 0,
                                            arity: 1,
                                            arguments: [
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 0,
                                                            column: 0,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 0,
                                                        },
                                                    },
                                                    value: Var(
                                                        "a",
                                                    ),
                                                },
                                            ],
                                        },
                                        Ctor {
                                            name: "Nothing",
                                            index: 1,
                                            arity: 0,
                                            arguments: [],
                                        },
                                    ],
                                    alternatives: 2,
                                    options: Normal,
                                },
                                index: 0,
                                arguments: [
                                    PatternCtorArg {
                                        index: 0,
                                        typ: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                            },
                                            value: Var(
                                                "a",
                                            ),
                                        },
                                        pattern: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 5,
                                                    column: 17,
                                                },
                                                end: Position {
                                                    line: 5,
                                                    column: 18,
                                                },
                                            },
                                            value: Var(
                                                "x",
                                            ),
                                        },
                                    },
                                ],
                                options: Normal,
                                alternatives: 2,
                            },
                        ),
                    },
                    value: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 22,
                            },
                            end: Position {
                                line: 5,
                                column: 23,
                            },
                        },
                        value: VarLocal(
                            "w",
                        ),
                    },
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 27,
                            },
                            end: Position {
                                line: 5,
                                column: 28,
                            },
                        },
                        value: VarLocal(
                            "x",
                        ),
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
