crates/alder-can/src/snapshots/alder_can__module__tests__let_destruct_self_reference_is_recursive.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nmain = let (a, b) = (a, 1) in b\n"
---
[
    RecursiveLet {
        name: Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 13,
                },
                end: Position {
                    line: 3,
                    column: 14,
                },
            },
            value: "a",
        },
        others: [],
    },
]
